# python-assignments

./: .gitignore  validate_brackets.py
BookManagement/flaskr/: __init__.py  auth.py  db.py  management.py  schema.sql
BookManagement/flaskr/static/: style.css
BookManagement/flaskr/templates/: base.html
ShapeGenerator/: main.py
Starter/: Goods.py  VendingMachine.py
TicTacToe/: Player.py  TicTacToe.py
django-rest/RestDjangoSample/: manage.py
get-profile-fm-elk/: README.md  config.py  config_service.py  config_sit.ini  elastic_client.py  file_helper.py  input.txt  main.py  profile_service.py  pyproject.toml  run_script.sh
get-profile-fm-elk/config/: config_sit.json
get-profile-fm-elk/src/: config.py  elastic_client.py  file_helper.py  logging_config.py  main.py  profile_service.py
miniboard/: main.py
mongodb_vector/: .gitignore  README.md  embedding_util.py  file_helper.py  input.csv  main.py  mongodb_client.py  pyproject.toml  recognition_service.py
mongodb_vector/src/: dummy.py  embedding_util.py  logging_config.py  main.py  mongodb_client.py
python_small_exercises/: GrowthOfAPopulation.py  Untitled Diagram.drawio  anagrams_checker.py  array_differ.py  calculate_cheapest.py  convert_to_dict.py  facebook_like.py  flatten.py  isbn_10_validation.py  line_drawer.py  pagination.py  parentheses.py  prime_checker.py  rgb.py  string_order.py  sum_matix_crosses.py  zeros.drawio  zeros.py
web_library/: db.sqlite3  manage.py
web_library/book/: form.py  models.py  urls.py  views.py
web_library/web_library/: main_urls.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
