[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Thin Pyai <thinpyai.win@wavemoney.com.mm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.14.0"
paramiko = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
