[tool.poetry]
name = "mongodb-vector"
version = "0.1.0"
description = ""
authors = ["Thin Pyai Win <thinpyai.win@wavemoney.com.mm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
cmake = "^3.30.3"
deepface = "^0.0.93"
scikit-learn = "^1.5.2"
tf-keras = "^2.17.0"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
